An awesome website man

--- a/app/app.css
+++ b/app/app.css
@@ -84,6 +84,12 @@ body {background-color: #8E8D8A;}
     /*margin: 10px;*/
 }
 
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1600px;
+    }
+}
+
 /*@media screen and (max-width: 768px) {*/
     /*.jumbotron {*/
         /*padding-top:20px;*/
@@ -171,3 +177,35 @@ body {background-color: #8E8D8A;}
 .customcard .card-title {
     color: #E98074;
 }
+
+.form-row {
+    padding: 10px;
+}
+
+[hidden] {
+    display: none !important;
+}
+
+/*.btn-file {*/
+    /*position: relative;*/
+    /*overflow: hidden;*/
+/*}*/
+/*.btn-file input[type=file] {*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*right: 0;*/
+    /*min-width: 100%;*/
+    /*min-height: 100%;*/
+    /*font-size: 100px;*/
+    /*text-align: right;*/
+    /*filter: alpha(opacity=0);*/
+    /*opacity: 0;*/
+    /*outline: none;*/
+    /*background: white;*/
+    /*cursor: inherit;*/
+    /*display: block;*/
+/*}*/
+
+/*#img-upload{*/
+    /*width: 100%;*/
+/*}*/
