pictures and post function

--- a/app/app.css
+++ b/app/app.css
@@ -209,3 +209,10 @@ body {background-color: #8E8D8A;}
 /*#img-upload{*/
     /*width: 100%;*/
 /*}*/
+
+#wrapper {
+    text-align: center;
+}
+#yourdiv {
+    display: inline-block;
+}
