--- a/app/app.css
+++ b/app/app.css
@@ -121,8 +121,7 @@ body {background-color: #8E8D8A;}
     /*width: 200px;*/
     /*height: 150px;*/
     margin: 10px;
-    min-height: 450px;
-    max-height: 450px;
+
 
     /*line-height: 150px;*/
     /*color: white;*/
@@ -131,6 +130,11 @@ body {background-color: #8E8D8A;}
     /*text-align: center;*/
 
 
+}
+
+.card .carcard {
+    min-height: 450px;
+    max-height: 450px;
 }
 
 .card:hover {
